[package]
name = "erhant"
description = "My personal blog, hosted on docs.rs"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/erhant/"
documentation = "https://docs.rs/erhant"


[package.metadata.docs.rs]
# tell docs.rs to include the katex header for math rendering
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]
doctored = "0.1.0"
