[package]
name = "erhant"
description = "My personal blog, hosted on docs.rs"
version = "0.1.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/erhant/"
documentation = "https://docs.rs/erhant"


[package.metadata.docs.rs]
# tell docs.rs to include the header for math rendering & highlighting
rustdoc-args = ["--html-in-header", "styleheader.html"]
